React tutorial git commit

--- a/Practice/index.html
+++ b/Practice/index.html
@@ -18,5 +18,6 @@
     const header = React.createElement("h1", {}, "Hello world in React");
     const root = ReactDOM.createRoot(document.getElementById("root"));
     root.render(header);
+    console.log('hello')
 </script>
 </html>
